Make scores clickable and some styles
* Made filter section sort of responsive
* Made Boys/Girls basketball responsive
* Made score card clickable

--- a/app/assets/stylesheets/base/_tables.scss
+++ b/app/assets/stylesheets/base/_tables.scss
@@ -45,6 +45,12 @@
   }
 }
 
+.float-left-last-column {
+  [class*="column"]:last-child {
+    float: left;
+  }
+}
+
 table.player-stats,
 table.game-stats {
   @include table;
