--- a/app/assets/stylesheets/flashes.css.scss
+++ b/app/assets/stylesheets/flashes.css.scss
@@ -1,13 +1,12 @@
 @import 'base/colors';
 
-#flash {
+.flash {
   z-index: 10;
   position: relative;
   width: 100%;
   height: 40px;
   border-bottom: 1px solid $body-background-color;
   text-align: center;
-  background: $alert-color;
 
   p {
     height: 40px;
@@ -16,4 +15,12 @@
     font-weight: 700;
     color: $eggshell;
   }
+}
+
+.flash-alert {
+  background: $alert-color;
+}
+
+.flash-notice {
+  background: $notice-color;
 }
