Paginate the posts

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -342,6 +342,12 @@ nav.admin-menu {
   }
 }
 
+.pagination {
+  padding-top: 2em;
+  font-size: 20px;
+  text-align: center;
+}
+
 footer.global {
   color: #5099c3;
   font-weight: 700;
