--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,8 @@
 <div id="main" class="twelve columns">
   <div class="posts-container">
     <%= render @posts %>
+    <div class="pagination">
+      <%= paginate @posts %>
+    </div>
   </div>
 </div>
