A post can be marked for email or not for rss
* https://www.pivotaltracker.com/story/show/96819740

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -92,8 +92,7 @@
             %p
               Subscribe to get the latest news on HS Basketball games
             = form_tag subscriptions_path, method: 'post' do
-              = label_tag :email
-              = text_field_tag :email, 'user@example.com'
+              = text_field_tag :email, nil, placeholder: "email"
               = submit_tag "Subscribe", class: 'button'
 
             %nav
