--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -3,7 +3,10 @@ $alternate-link-color: #84D1DA;
 $alert-color: #9b2638;
 $body-background-color: #002e40;
 $black: #151515;
+$orange: #ff6c00;
 $body-text-color: #5a5a5a;
 $brand-blue: #142E42;
 $eggshell: #efefef;
 $grey: #7f7f7f;
+$off-white: #ddd;
+$off-black: #272727;
