--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,18 @@
 <div id="main" class="twelve columns">
-  <div class="posts-container">
-    <%= render @posts %>
-    <div class="pagination">
-      <%= paginate @posts %>
+  <% if @first_post.present? %>
+    <div class="posts-container">
+      <div class="first-post">
+        <% if @first_post.header_image.exists? %>
+          <%= link_to image_tag(@first_post.header_image.url), post_path(@first_post) %>
+        <% end %>
+        <h1><%= link_to @first_post.title, @first_post %></h1>
+        <div class="post-body"><p><%= @first_post.excerpt %><p></div>
+        <%= render 'admin_actions', post: @first_post %>
+      </div>
+      <%= render @posts %>
+      <div class="pagination">
+        <%= paginate @posts %>
+      </div>
     </div>
-  </div>
+  <% end %>
 </div>
