--- a/app/views/shared/_mixpanel.html.erb
+++ b/app/views/shared/_mixpanel.html.erb
@@ -22,6 +22,18 @@
       mixpanel.track('Facebook Button Clicked');
     });
 
+    $('.instagram-js').click(function() {
+      mixpanel.track('Instagram Button Clicked');
+    });
+
+    $('.twitter-js').click(function() {
+      mixpanel.track('Twitter Button Clicked');
+    });
+
+    $('.youtube-js').click(function() {
+      mixpanel.track('Youtube Button Clicked');
+    });
+
     $('.follow-button').click(function() {
       mixpanel.track('Twitter Button Clicked');
     });
