--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,12 @@
           <%= link_to image_tag(@first_post.header_image.url), post_path(@first_post) %>
         <% end %>
         <h1><%= link_to @first_post.title, @first_post %></h1>
-        <div class="post-body"><p><%= @first_post.excerpt %><p></div>
+        <div class="post-body">
+          <p>
+            <%= @first_post.excerpt %>
+            <%= link_to "Read more", @first_post, class: "read-more" %>
+          </p>
+        </div>
         <%= render 'admin_actions', post: @first_post %>
       </div>
       <%= render @posts %>
