Add sport in ticker table

--- a/app/assets/stylesheets/base/_tables.scss
+++ b/app/assets/stylesheets/base/_tables.scss
@@ -60,7 +60,8 @@ table.game-stats {
   margin-bottom: 40px;
 
   th.team span {
-    display: none;
+    text-align: center;
+    font-size: 10px;
   }
 
   tr.winner td,
