--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -136,14 +136,15 @@ body {
   }
 
   a {
-    display: block;
-    background: $off-black;
+    font-weight: 700;
+    color: $blue;
+    text-transform: uppercase;
     text-align: center;
+    text-decoration: none;
+    font-size: 16;
+    display: block;
     padding: 20px 0;
     text-decoration: none;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
 
     &:hover, &:active, &:focus {
       color: $orange;
@@ -152,8 +153,8 @@ body {
 }
 
 .top-nav {
-  background-color: $off-black;
-  box-shadow: 0 4px 2px -2px rgba(0,0,0,0.3);
+  box-shadow: inset 0 0 1em rgba(0,0,0,0.3);
+  padding: .3em 0;
 
   .left-nav {
     margin-left: 15em;
@@ -178,7 +179,7 @@ body {
 
 ul.nav.buttons {
   list-style-type: none;
-  top: 50%;
+  padding-top: .45em;
   transform: translateY(50%);
 
   li {
@@ -186,11 +187,13 @@ ul.nav.buttons {
     display: inline;
 
     a {
+      font-weight: 700;
+      color: $blue;
+      text-transform: uppercase;
+      padding-bottom: 2em;
       text-align: center;
       text-decoration: none;
-      color: white;
-      font-weight: bold;
-      font-size: 18px;
+      font-size: 16px;
 
       &:hover, &:active, &:focus {
         color: $orange;
@@ -311,7 +314,6 @@ nav.admin-menu {
 .twitter-feed {
   width: 100%;
   margin-top: 1em;
-  padding: 0 1em;
 }
 
 .pagination {
@@ -321,7 +323,8 @@ nav.admin-menu {
 }
 
 footer.global {
-  color: #5099c3;
+  margin: 0 1em;
+  color: $blue;
   font-weight: 700;
   text-transform: uppercase;
   padding-bottom: 2em;
@@ -348,7 +351,7 @@ footer.global {
       }
 
       a {
-        color: #5099c3;
+        color: $blue;
       }
     }
   }
