--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -16,13 +16,24 @@
 }
 
 .first-post {
+  border-bottom: 1px solid $off-white;
+  margin: 1em;
+  padding: 1em;
+
+  img {
+    width: 50%;
+    float: left;
+    padding: 0 1em;
+    @media only screen and (max-width: 767px) {
+      width: 100%;
+      margin-bottom: 1em;
+    }
+  }
+
   h1 {
     font-size: 34px;
     text-align: center;
   }
-  border-bottom: 1px solid $off-white;
-  margin: 1em;
-  padding: 1em;
 }
 
 .posts-container {
@@ -33,12 +44,33 @@
   .sharing {
     padding-left: 1em;
   }
+
+  img {
+    @media only screen and (max-width: 767px) {
+      width: 100%;
+      margin-bottom: 1em;
+    }
+  }
+
+  h1 {
+    margin-top: 0 !important;
+  }
 }
 
 .post-container {
   margin: 1em !important;
   padding: 1em;
   border-bottom: 1px $off-white solid;
+
+  img {
+    width: 100%;
+  }
+
+  h1 {
+    @media only screen and (max-width: 767px) {
+      text-align: center;
+    }
+  }
 }
 
 .post-header {
@@ -46,7 +78,16 @@
 }
 
 .post-image-show {
-  padding: 1em !important;
+  padding: 0, 1em;
+
+  img {
+    float: left;
+    width: 50%;
+    padding: 0 1em 0 0;
+    @media only screen and (max-width: 767px) {
+      width: 100%;
+    }
+  }
 }
 
 .post-form-image {
@@ -54,17 +95,16 @@
   font-size: 14px;
 }
 
-.post-image {
+.post-show {
   width: 100%;
   height: 100%;
   margin: 0 auto;
   padding: 0 0 1em 0;
 
-  img {
-    flex-shrink: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
+  h1 {
+    margin-top: 0 !important;
+    font-size: 34px;
+    text-align: center;
   }
 }
 
@@ -78,10 +118,13 @@
 }
 
 .post-title {
-  margin: 0 !important;
   font-size: 34px;
 }
 
 .post-form-excerpt {
   height: 8em;
+}
+
+.post-actions {
+  margin: 1em;
 }
