--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,15 +2,14 @@
   <% if @first_post.present? %>
     <div class="posts-container">
       <div class="first-post">
-        <% if @first_post.header_image.exists? %>
-          <%= link_to image_tag(@first_post.header_image.url), post_path(@first_post) %>
-        <% end %>
-        <h1><%= link_to @first_post.title, @first_post %></h1>
-        <div class="post-body">
-          <p>
-            <%= @first_post.excerpt %>
-            <%= link_to "Read more", @first_post, class: "read-more" %>
-          </p>
+        <div class="row">
+          <% if @first_post.header_image.present? %>
+            <%= link_to image_tag(@first_post.header_image.url), post_path(@first_post) %>
+          <% end %>
+          <h1><%= link_to @first_post.title, @first_post %></h1>
+          <div class="post-body">
+            <%= truncate_html(@first_post.body, length: 750, omission: " " + link_to("Read more", @first_post, class: "read-more")) %>
+          </div>
         </div>
         <%= render 'admin_actions', post: @first_post %>
       </div>
