--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,32 +7,30 @@
 <div id="main" class="columns">
   <div class="posts-container">
     <div class="row post-header">
-      <div class="post-image-show post-image four columns">
+      <div class="post-image-show">
         <% if @post.header_image.exists? %>
           <%= image_tag @post.header_image.url %>
         <% end %>
-      </div>
-      <div class="eight columns">
         <h1 class="post-title"><%= @post.title %></h1>
         <% if @post.game.present? %>
           <%= render 'games/game_summary', game: @post.game %>
           <%= link_to 'Box Score', game_path(@post.game), class: 'box-score' %>
         <% end %>
+        <div class="sharing">
+          <span>
+            <%= link_to 'Share on Facebook', facebook_share_url(post_url(@post)),
+              class: 'facebook', target: '_blank' %>
+          </span>
+          <span>
+            <%= link_to 'Share on Twitter',
+              "http://twitter.com/home/?status=#{twitter_post_message(@post)}",
+              class: 'twitter', data: { lang: 'en' }, target: '_blank'
+            %>
+          </span>
+        </div>
+        <div class="post-body"><%= @post.body.html_safe %></div>
       </div>
     </div>
-    <div class="sharing">
-      <span>
-        <%= link_to 'Share on Facebook', facebook_share_url(post_url(@post)),
-          class: 'facebook', target: '_blank' %>
-      </span>
-      <span>
-        <%= link_to 'Share on Twitter',
-            "http://twitter.com/home/?status=#{twitter_post_message(@post)}",
-            class: 'twitter', data: { lang: 'en' }, target: '_blank'
-          %>
-      </span>
-    </div>
-    <div class="post-body"><%= @post.body.html_safe %></div>
     <%= render 'admin_actions', post: @post %>
   </div>
 </div>
