made final touches

--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -11,4 +11,5 @@ $grey: #7f7f7f;
 $off-white: #ddd;
 $off-black: #272727;
 $notice-color: #00cc00;
-$blue: #5099c3
+$blue: #5099c3;
+$logo-blue: #27278C;
