fix syntext errors.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -81,7 +81,7 @@
       .mobile-twelve.nine.columns
         = yield
       .mobile-twelve.three.columns
-        %ins{:class => "adsbygoogle", style: "display:inline-block;width:270px;height:270px" 'data-ad-client':"ca-pub-7880794362125914" 'data-ad-slot': "5287552182"}
+        %ins{:class => "adsbygoogle", style: "display:inline-block;width:270px;height:270px", 'data-ad-client':"ca-pub-7880794362125914", 'data-ad-slot': "5287552182"}
       .mobile-twelve.three.columns.twitter-feed.hide-for-small
         %a.twitter-timeline{"data-widget-id" => "386209842722914304",
           "data-chrome" => "transparent",
