--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,6 +21,7 @@
     = javascript_include_tag 'application'
     = csrf_meta_tags
 
+
   %body{ body_attributes }
     = render 'shared/flash_messages' if flash.any?
     %header
@@ -122,9 +123,13 @@
 
   %script{ src: "https://apis.google.com/js/platform.js", async: true, defer: true }
   %script{ src: "//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js", async: true, defer: true }
+  %script{ src: "//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js", async: true, defer: true }
 
   :javascript
     (adsbygoogle = window.adsbygoogle || []).push({});
     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+
+  :javascript
+    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":"http://" + "#{Rails.env === 'production' ? 'www' : 'staging'}" +".hsboxscoresnyc.com/privacy-policy","theme":"dark-top"};
 
   = render 'shared/google_analytics'
