--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
   / <![endif]
   %head
     %meta{ charset: 'utf-8' }/
-    %meta{ content: 'Your source for New York City high school sports scores.', name: 'description' }/
+    %meta{ content: @meta_description || 'Your source for New York City high school sports scores.', name: 'description' }/
     %meta{ content: 'width=device-width, initial-scale=1.0', name: 'viewport' }/
 
     %title
