--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -130,6 +130,6 @@
     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 
   :javascript
-    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":"http://" + "#{Rails.env === 'production' ? 'www' : 'staging'}" +".hsboxscoresnyc.com/privacy-policy","theme":"dark-top"};
+    window.cookieconsent_options = {"message":"This website uses cookies to personalize content and ads, to provide social media features and to analyze our traffic. We also share information about your use of our site with our social media, advertising and analytics partners who may combine it with other information you’ve provided to them or they’ve collected from your use of their services.","theme":"dark-top"};
 
   = render 'shared/google_analytics'
