--- a/app/views/posts/_admin_actions.html.erb
+++ b/app/views/posts/_admin_actions.html.erb
@@ -1,4 +1,4 @@
-<% if superadmin_signed_in? || post.admin_id == current_admin.try(:id) %>
+<% if superadmin_signed_in? || post.admin_id === current_admin.try(:id) %>
   <div class="post-actions">
     <%= link_to 'Edit Post', edit_post_path(post) %>
     <%= link_to 'Delete Post', post_path(post), method: :delete, confirm: "Are you sure?" %>
