--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -97,8 +97,12 @@ body {
 }
 
 .social {
+  padding-top:1em;
+  margin: 1em;
   img {
-    width: 10%;
+    margin-right:1em;
+    width: 8%;
+    min-width: 40px;
   }
 }
 
