--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -101,9 +101,15 @@ body {
   margin: 1em;
   img {
     margin-right:1em;
-    width: 8%;
+    width: 4%;
     min-width: 40px;
   }
+}
+
+.subscribe-button {
+  padding-top: 1em;
+  margin-top: 1em;
+  margin-right: 1em
 }
 
 .mobile {
