--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,7 +1,6 @@
 @import "base/colors";
 
 .post-body {
-  padding: 1em;
 
   p {
     font-size: 18px;
@@ -21,8 +20,7 @@
   padding: 1em;
 
   img {
-    width: 50%;
-    float: left;
+    width: 100%;
     padding: 0 1em;
     @media only screen and (max-width: 767px) {
       width: 100%;
@@ -32,7 +30,7 @@
 
   h1 {
     font-size: 34px;
-    text-align: center;
+    text-align: left;
   }
 }
 
@@ -53,13 +51,12 @@
   }
 
   h1 {
-    margin-top: 0 !important;
+    margin-top: 15px !important;
   }
 }
 
 .post-container {
-  margin: 1em !important;
-  padding: 1em;
+  padding-top: 30px;
   border-bottom: 1px $off-white solid;
 
   img {
