--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,14 +1,14 @@
 <div class="row post-container">
-  <div class="mobile-twelve three columns post-image">
+  <div class="mobile-twelve twelve columns post-image">
     <% if post.header_image.exists? %>
-      <%= link_to image_tag(post.header_image.url(:medium)), post_path(post) %>
+      <%= link_to image_tag(post.header_image.url), post_path(post) %>
     <% end %>
   </div>
-  <div class="mobile-twelve nine columns">
+  <div class="mobile-twelve twelve columns">
     <h1 class="post-title"><%= link_to post.title, post %></h1>
     <div class="post-body">
       <p>
-        <%= post.excerpt %>
+        <%= post.excerpt %><br />
         <%= link_to "Read more", post, class: "read-more" %>
       <p>
         <% if post.game.present? %>
