--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,14 @@
 <div id="main" class="twelve columns">
-  <% if @first_post.present? %>
     <div class="posts-container">
-      <%= render @posts %>
+    <% @posts.in_groups_of(3, false).each do |posts| %>
+    	<div class="row post-container">
+	    	<% posts.each do |post| %>
+	      		<%= render partial: "post", locals: {post: post} %>
+	      	<% end %>
+	    </div>
+     <% end %>
       <div class="pagination">
         <%= paginate @posts %>
       </div>
     </div>
-  <% end %>
 </div>
